Use more `SynchronizedItemReader` in tests